<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_me_notification_for"
                android:textColor="@color/textDark"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progress_bar_loading"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="?android:attr/progressBarStyleLarge"
                android:indeterminate="true"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/layout_no_fines"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no_fines"
            android:textColor="@color/textGreen"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/near_overdue"
            android:checked="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            />
        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_reservations"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alerts"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_don_t_have_any_alerts"
            android:textColor="@color/textGreen"
            android:textSize="12sp"
            android:layout_marginStart="16dp" />
    </LinearLayout>
</layout>
