<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/colorBackgroundNegative">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/plus"
            android:textSize="22sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorNegative"/>
        <TextView
            android:id="@+id/text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="0.100"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorNegative"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>

    </LinearLayout>
    <TextView
        android:id="@+id/text_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="The science of theawo lorem irpsum thosiop ragularity of the conpet"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:textColor="@color/textDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_barcode"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
        <TextView
            android:id="@+id/text_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="YU213123"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/type"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="OVERDUE"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorNegative"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/due_date"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
        <TextView
            android:id="@+id/text_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            tools:text="10/12/2018"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/return_text"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
        <TextView
            android:id="@+id/text_return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10/12/2018"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textDark"/>
    </LinearLayout>
</LinearLayout>